--- a/运算码.md
+++ b/运算码.md
@@ -2,3 +2,4 @@
 
 利用反码进行计算，当计算跨0时，会出现1个误差，因为在原码和反码中，0有两种表现形式0000 0000和1000 0000，因此出现补码
 ![补码](http://m.qpic.cn/psc?/V51UtlER36fYng45Fb5k3ktWYR4BINB0/ruAMsa53pVQWN7FLK88i5ujMf279M84jLSb5B*y9L.55QmJmDN2dwrGAprRjVtut*kToIiX45fy.xZ9DTyNv0KXdMBXmjrNL7Z4q.FBrduM!/b&bo=GQNsAQAAAAADB1U!&rf=viewer_4)
+![图片显示](https://upload-images.jianshu.io/upload_images/6638651-df3ebfedbeb3b7cd.png?imageMogr2/auto-orient/strip|imageView2/2/w/1200/format/webp)
