--- a/运算码.md
+++ b/运算码.md
@@ -1,19 +1,19 @@
-## 原码：##
+#### 原码：
 十进制数据的二进制表现形式，最左边是符号位，0为正，1为负。
-## 原码的弊端##
+#### 原码的弊端
 利用原码进行计算的时候，如果是正数完全没有问题。
 但是如果是负数计算，结果就出错，实际运算的方向，跟正确的运算方向是相反的。
 
-## 反码出现的目的##
+#### 反码出现的目的
 为了解决原码不能计算负数的问题而出现的。
-## 反码的计算规则##
+#### 反码的计算规则
 正数的反码不变，负数的反码在原码的基础上，符号位不变。数值取反，0变1，1变0。
-## 反码的弊端##
+#### 反码的弊
 负数运算的时候，如果结果不跨0，是没有任何问题的，但是如果结果跨0，跟实际结果会有1的偏差
 
-## 补码出现的目的##
+#### 补码出现的目的
 为了解决负数计算时跨0的问题而出现的。
-## 补码的计算规则##
+#### 补码的计算规则
 正数的补码不变，负数的补码在反码的基础上+1。另外补码还能多记录一个特殊的值-128，该数据在1个字节下，没有原码和反码
 
 利用反码进行计算，当计算跨0时，会出现1个误差，因为在原码和反码中，0有两种表现形式0000 0000和1000 0000，因此出现补码
