--- a/运算码.md
+++ b/运算码.md
@@ -22,7 +22,7 @@
 ![补码](http://m.qpic.cn/psc?/V51UtlER36fYng45Fb5k3ktWYR4BINB0/ruAMsa53pVQWN7FLK88i5ujMf279M84jLSb5B*y9L.55QmJmDN2dwrGAprRjVtut*kToIiX45fy.xZ9DTyNv0KXdMBXmjrNL7Z4q.FBrduM!/mnull&bo=GQNsAQAAAAADB1U!&rf=photolist&t=5)
 
 ---
-正数的原码反码补码都是一样的
+正数的原码反码补码都是**相同**的
 负数的原码变反码的方法：符号位不变，其余取反。补码是在反码的基础上加1
 
 ---
