--- a/数据类型.md
+++ b/数据类型.md
@@ -8,11 +8,14 @@
 
 **隐式转换（自动类型提升）**
 btye<short<int<long<double<float<double
+                                        
 隐式转换的两种提升规则:
+                                        
 1.取值范围小的，和取值范围大的进行运算，小的会先提升为大的，再进行运算
+                                        
 2.byte short char 三种类型的数据在运算的时候，都会直接先提升为int，然后再进行运算
 例子：
-'''c
+'''java
   public class Test {
     public static void main(String[] args) {
       byte a = 10; //0000 1010
@@ -20,7 +23,7 @@ btye<short<int<long<double<float<double
       System.out.println(b);
     }
   }
- '''
+'''
 **强制转换**
 如果把一个取值范围大的数值，赋值给取值范围小的变量。是不允许直接赋值的。如果一定要这么做就需要加入强制转换
 格式:目标数据类型变量名 =(目数据类型)被强转的数据;
