--- a/数据类型.md
+++ b/数据类型.md
@@ -22,7 +22,7 @@ btye<short<int<long<double<float<double
   public class Test {
     public static void main(String[] args) {
       byte a = 10; //0000 1010
-      int b = a; // 0000 0000 0000 0000 0000 0000 0000 1013  
+      int b = a; // 0000 0000 0000 0000 0000 0000 0000 1010  
       System.out.println(b);
     }
   }
@@ -33,3 +33,12 @@ btye<short<int<long<double<float<double
 如果把一个取值范围大的数值，赋值给取值范围小的变量。是不允许直接赋值的。如果一定要这么做就需要加入强制转换
                                         
 格式:目标数据类型变量名 =(目数据类型)被强转的数据;
+```java
+public class Test (
+public static void main(String[] args) 
+{int a = 300; // 0000 0000 0000 0000 0000 0001 00010 1100
+byte b = (byte)a;//0010 1100
+System.out.printIn(b);
+}
+}
+```
