--- a/数据类型.md
+++ b/数据类型.md
@@ -33,12 +33,14 @@ btye<short<int<long<double<float<double
 如果把一个取值范围大的数值，赋值给取值范围小的变量。是不允许直接赋值的。如果一定要这么做就需要加入强制转换
                                         
 格式:目标数据类型变量名 =(目数据类型)被强转的数据;
+例子：
 ```java
 public class Test (
-public static void main(String[] args) 
-{int a = 300; // 0000 0000 0000 0000 0000 0001 00010 1100
-byte b = (byte)a;//0010 1100
-System.out.printIn(b);
-}
+  public static void main(String[] args) {
+    int a = 300; // 0000 0000 0000 0000 0000 0001 00010 1100
+    byte b = (byte)a;//0010 1100
+    System.out.printIn(b);
+  }
 }
 ```
+                                        
