--- a/运算码.md
+++ b/运算码.md
@@ -30,3 +30,12 @@
 
 ---
 在计算机中，数据的存储和计算都是以补码的形式来操作的。
+
+### 运算符
+|运算符|含义|运算规则|
+|:---|:---|:---|
+|&|逻辑与|0为false 1为true|
+| | |逻辑或|0为false 1为true|
+|<<|左移|向左移动，低位补0|
+|>>|右移|向右移动，高位补0或1|
+|>>>|无符号右移|向右移动，高位补0|
