--- a/运算码.md
+++ b/运算码.md
@@ -35,7 +35,7 @@
 |运算符|含义|运算规则|
 |:---|:---|:---|
 |&|逻辑与|0为false 1为true|
-| | |逻辑或|0为false 1为true|
+|  |逻辑或|0为false 1为true|
 |<<|左移|向左移动，低位补0|
 |>>|右移|向右移动，高位补0或1|
 |>>>|无符号右移|向右移动，高位补0|
